--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1,8 +1,8 @@
 ---
 _lang_: "English"
 headlineMisskey: "A network connected by notes"
-introMisskey: "Welcome! Sharkey is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
-poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>Sharkey</b> which is based on Misskey (referred to as a \"Misskey instance\")."
+introMisskey: "Welcome! Re:nekey is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
+poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>Re:nekey</b> which is based on Misskey (referred to as a \"Misskey instance\")."
 monthAndDay: "{month}/{day}"
 search: "Search"
 notifications: "Notifications"
@@ -226,7 +226,7 @@ noUsers: "There are no users"
 editProfile: "Edit profile"
 noteDeleteConfirm: "Are you sure you want to delete this note?"
 pinLimitExceeded: "You cannot pin any more notes"
-intro: "Installation of Sharkey has been finished! Please create an admin user."
+intro: "Installation of Re:nekey has been finished! Please create an admin user."
 done: "Done"
 processing: "Processing..."
 preview: "Preview"
@@ -413,7 +413,7 @@ exploreFediverse: "Explore the Fediverse"
 popularTags: "Popular tags"
 userList: "Lists"
 about: "About"
-aboutMisskey: "About Sharkey"
+aboutMisskey: "About Re:nekey"
 administrator: "Administrator"
 token: "Token"
 2fa: "Two-factor authentication"
@@ -747,7 +747,7 @@ onlineUsersCount: "{n} users are online"
 nUsers: "{n} Users"
 nNotes: "{n} Notes"
 sendErrorReports: "Send error reports"
-sendErrorReportsDescription: "When turned on, detailed error information will be shared with Sharkey when a problem occurs, helping to improve the quality of Sharkey.\nThis will include information such the version of your OS, what browser you're using, your activity in Sharkey, etc."
+sendErrorReportsDescription: "When turned on, detailed error information will be shared with Re:nekey when a problem occurs, helping to improve the quality of Re:nekey.\nThis will include information such the version of your OS, what browser you're using, your activity in Re:nekey, etc."
 myTheme: "My theme"
 backgroundColor: "Background color"
 accentColor: "Accent color"
@@ -841,7 +841,7 @@ hashtags: "Hashtags"
 troubleshooting: "Troubleshooting"
 useBlurEffect: "Use blur effects in the UI"
 learnMore: "Learn more"
-misskeyUpdated: "Sharkey has been updated!"
+misskeyUpdated: "Re:nekey has been updated!"
 whatIsNew: "Show changes"
 translate: "Translate"
 translatedFrom: "Translated from {x}"
@@ -970,8 +970,8 @@ numberOfLikes: "Likes"
 show: "Show"
 neverShow: "Don't show again"
 remindMeLater: "Maybe later"
-didYouLikeMisskey: "Have you taken a liking to Sharkey?"
-pleaseDonate: "{host} uses the free software, Sharkey. We would highly appreciate your donations so development of Sharkey can continue!"
+didYouLikeMisskey: "Have you taken a liking to Re:nekey?"
+pleaseDonate: "{host} uses the free software, Re:nekey. We would highly appreciate your donations so development of Re:nekey can continue!"
 roles: "Roles"
 role: "Role"
 noRole: "Role not found"
@@ -1083,7 +1083,7 @@ rolesThatCanBeUsedThisEmojiAsReactionPublicRoleWarn: "These roles must be public
 cancelReactionConfirm: "Really delete your reaction?"
 changeReactionConfirm: "Really change your reaction?"
 later: "Later"
-goToMisskey: "To Sharkey"
+goToMisskey: "To Re:nekey"
 additionalEmojiDictionary: "Additional emoji dictionaries"
 installed: "Installed"
 branding: "Branding"
@@ -1165,7 +1165,7 @@ _initialAccountSetting:
   pushNotificationDescription: "Enabling push notifications will allow you to receive notifications from {name} directly on your device."
   initialAccountSettingCompleted: "Profile setup complete!"
   haveFun: "Enjoy {name}!"
-  ifYouNeedLearnMore: "If you'd like to learn more about how to use {name} (Sharkey), please visit {link}."
+  ifYouNeedLearnMore: "If you'd like to learn more about how to use {name} (Re:nekey), please visit {link}."
   skipAreYouSure: "Really skip profile setup?"
   laterAreYouSure: "Really do profile setup later?"
 _serverRules:
@@ -1187,7 +1187,7 @@ _accountMigration:
   moveTo: "Migrate this account to a different one"
   moveToLabel: "Account to move to:"
   moveCannotBeUndone: "Account migration cannot be undone."
-  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to Sharkey v13.12.0 and later. Other ActivityPub software, such as Mastodon, might function differently.)"
+  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to Re:nekey later. Other ActivityPub software, such as Mastodon, might function differently.)"
   moveAccountHowTo: "To migrate, first create an alias for this account on the account to move to.\nAfter you have created the alias, enter the account to move to in the following format: @username@server.example.com"
   startMigration: "Migrate"
   migrationConfirm: "Really migrate this account to {account}? Once started, this process cannot be stopped or taken back, and you will not be able to use this account in its original state anymore."
@@ -1198,9 +1198,9 @@ _achievements:
   earnedAt: "Unlocked at"
   _types:
     _notes1:
-      title: "just setting up my msky"
+      title: "just setting up my Re"
       description: "Post your first note"
-      flavor: "Have a good time with Sharkey!"
+      flavor: "Have a good time with Re:nekey!"
     _notes10:
       title: "Some notes"
       description: "Post 10 notes"
@@ -1296,7 +1296,7 @@ _achievements:
     _login1000:
       title: "Master of Notes III"
       description: "Log in for a total of 1,000 days"
-      flavor: "Thank you for using Sharkey!"
+      flavor: "Thank you for using Re:nekey!"
     _noteClipped1:
       title: "Must... clip..."
       description: "Clip your first note"
@@ -1356,18 +1356,18 @@ _achievements:
       title: "Likes Achievements"
       description: "Look at your list of achievements for at least 3 minutes"
     _iLoveMisskey:
-      title: "I Love Sharkey"
-      description: "Post \"I ❤ #Sharkey\""
-      flavor: "Sharkey's development team greatly appreciates your support!"
+      title: "I Love Re:nekey"
+      description: "Post \"I ❤ #Re:nekey\""
+      flavor: "Re:nekey's development team greatly appreciates your support!"
     _foundTreasure:
       title: "Treasure Hunt"
       description: "You've found the hidden treasure"
     _client30min:
       title: "Short break"
-      description: "Keep Sharkey opened for at least 30 minutes"
+      description: "Keep Re:nekey opened for at least 30 minutes"
     _client60min:
-      title: "No \"Miss\" in Sharkey"
-      description: "Keep Sharkey opened for at least 60 minutes"
+      title: "No \"Miss\" in Re:nekey"
+      description: "Keep Re:nekey opened for at least 60 minutes"
     _noteDeletedWithin1min:
       title: "Nevermind"
       description: "Delete a note within a minute of posting it"
@@ -1590,12 +1590,12 @@ _registry:
   domain: "Domain"
   createKey: "Create key"
 _aboutMisskey:
-  about: "Sharkey is open-source software based on Misskey which has been in developed since 2014 by syuilo."
+  about: "Re:nekey is a custom client based on Sharkey and developed by 1641project."
   contributors: "Main contributors"
   allContributors: "All contributors"
   source: "Source code"
-  translation: "Translate Sharkey"
-  donate: "Donate to Sharkey"
+  translation: "Translate Re:nekey"
+  donate: "Donate to Re:nekey"
   morePatrons: "We also appreciate the support of many other helpers not listed here. Thank you! 🥰"
   patrons: "Patrons"
 _displayOfSensitiveMedia:
@@ -1730,7 +1730,7 @@ _time:
   hour: "Hour(s)"
   day: "Day(s)"
 _timelineTutorial:
-  title: "How to use Sharkey"
+  title: "How to use Re:nekey"
   step1_1: "This is the \"timeline\". All \"notes\" submitted on {name} will be chronologically displayed here."
   step1_2: "There are a few different timelines. For example, the \"Home timeline\" will contain notes of users you follow, and the \"Local timeline\" will contain notes from all users of {name}."
   step2_1: "Let's try posting a note next. You can do so by pressing the button with a pencil icon."
@@ -2152,8 +2152,8 @@ _moderationLogTypes:
   deleteAd: "Ad deleted"
   updateAd: "Ad updated"
 _mfm:
-  intro: "MFM is a markup language used on Misskey, Sharkey, Firefish, Akkoma, and more that can be used in many places. Here you can view a list of all available MFM syntax."
-  dummy: "Sharkey expands the world of the Fediverse"
+  intro: "MFM is a markup language used on Misskey, Re:nekey, Firefish, Akkoma, and more that can be used in many places. Here you can view a list of all available MFM syntax."
+  dummy: "Re:nekey expands the world of the Fediverse"
   mention: "Mention"
   mentionDescription: "You can specify a user by using an At-Symbol and a username."
   hashtag: "Hashtag"
