feat(client): 翻訳機能を利用しやすくする。

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1,5 +1,8 @@
 ---
 _lang_: "English"
+closeTranslate: "Close translation"
+translateNote: "Translate Note"
+showTranslateButtonInNote: "Display translate button in note body"
 headlineMisskey: "A network connected by notes"
 introMisskey: "Welcome! Re:nekey is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
 poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>Re:nekey</b> which is based on Misskey (referred to as a \"Misskey instance\")."
