--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -1,6 +1,8 @@
 _lang_: "日本語"
 
 headlineMisskey: "ノートでつながるネットワーク"
+addSingle: "一つだけ追加"
+addMultiple: "複数追加"
 introMisskey: "ようこそ！Re:nekeyは、オープンソースの分散型マイクロブログサービスです。\n「ノート」を作成して、いま起こっていることを共有したり、あなたについて皆に発信しよう📡\n「リアクション」機能で、皆のノートに素早く反応を追加することもできます👍\n新しい世界を探検しよう🚀"
 poweredByMisskeyDescription: "{name}は、オープンソースのプラットフォーム<b>Re:nekey</b>のサーバーのひとつです。"
 monthAndDay: "{month}月 {day}日"
